# docs/swagger.yaml
@@ -153,19 +153,8 @@ definitions:
         example: unprocessable_entity
         type: string
     type: object
-host: localhost:9000
 info:
-  contact:
-    email: support@swagger.io
-    name: API Support
-    url: http://www.swagger.io/support
-  description: Template API Examples
-  license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
-  title: Template API
-  version: 1.0.0
+  contact: {}
 paths:
   /liveness:
     get:
@@ -194,7 +183,7 @@ paths:
       summary: Get readiness health status
       tags:
       - health
-  /v1/xxxxx:
+  /v1/xxxxxs:
     get:
       consumes:
       - application/json
@@ -227,7 +216,7 @@ paths:
             $ref: '#/definitions/xres.UnprocessableEntityResponse'
       summary: Get Xxxxx with pagination
       tags:
-      - xxxxx
+      - xxxxxs
     post:
       consumes:
       - application/json
@@ -256,8 +245,8 @@ paths:
             $ref: '#/definitions/xres.UnprocessableEntityResponse'
       summary: Create a new Xxxxx
       tags:
-      - xxxxx
-  /v1/xxxxx/{id}:
+      - xxxxxs
+  /v1/xxxxxs/{id}:
     get:
       consumes:
       - application/json
@@ -281,5 +270,5 @@ paths:
             $ref: '#/definitions/xres.UnprocessableEntityResponse'
       summary: Get Xxxxx by ID
       tags:
-      - xxxxx
+      - xxxxxs
 swagger: "2.0"
